tdf#87667 If image is cropped, set cropped size as original size.

Change-Id: Ief76037f087a2225442294b972d331fc4476bbec
Signed-off-by: Gulsah Kose <gulsah.1004@gmail.com>