include/svx/svdograf.hxx
@@ -138,6 +138,8 @@ public:
     bool IsEPS() const;
     bool IsSwappedOut() const;
 
+    bool IsCropped() const;
+
     const MapMode&          GetGrafPrefMapMode() const;
     const Size&             GetGrafPrefSize() const;
 
